2007-11-14  Mathias Hasselmann  <mathias@openismus.com>

	Add capability for listing publisher resources.

	* libepc/publisher.c: Implement URL handler for '/list/' and '/' path.
	* libepc/consumer.c, libepc/consumer.h: Implement epc_consumer_list.
	* examples/list-resources.c: New example for listing resources.
	* Makefile.am, examples/.gitignore: Add examples/list-resources.
	* docs/reference/libepc/libepc-sections.txt: Add epc_consumer_list.

2007-11-14  Mathias Hasselmann  <mathias@openismus.com>

	Give EpcConsumer and EpcPublisher separate sections.
	Give separete files for EpcPublisher helper structures.

	* docs/reference/libepc/libepc-docs.xml,
	docs/reference/libepc/libepc-sections.txt: Reorganize sections.
	* libepc/publisher.c: Document EpcAuthContext and EpcContents section.

2007-11-14  Mathias Hasselmann  <mathias@openismus.com>

	Rename EpcContent: "Inhalt" is "contents" with "s", not "content".

	* docs/reference/libepc/libepc-sections.txt,
	examples/test-publisher.c, libepc/publisher.c,
	libepc/publisher.h: Rename EpcContent to EpcContents.

2007-11-13  Mathias Hasselmann  <mathias@openismus.com>

	Distribute gtk-doc.make, libepc-docs.xml and libepc-sections.txt.

	* Makefile.am, docs/reference/libepc/Makefile.am: Update EXTRA_DIST.

2007-11-13  Mathias Hasselmann  <mathias@openismus.com>

	Add error handling to epc_consumer_lookup.

	* examples/test-consumer.c, tests/test-consumer-by-name.c:
	Pass error argument to epc_consumer_lookup.
	* docs/reference/libepc/libepc-sections.txt: Add EPC_HTTP_ERROR.
	* libepc/consumer.c, libepc/consumer.h: Add error handling to
	epc_consumer_lookup. Add EPC_HTTP_ERROR and epc_http_error_quark.
	* Makefile.am: Add libepc/libepc.la to LDADD variable of
	examples/test-consumer.

2007-11-13  Mathias Hasselmann  <mathias@openismus.com>

	Do more restrictive argument checks in epc_dispatcher_add_service to
	work arround Avahi race conditions.

	* libepc/dispatcher.c: Do more restrictive argument checks in